# humandbs-llm-test

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
humandbs_llm_test/: filtering_and_qc_values.json  local_llm.py  open_ai_api.py
humandbs_llm_test/output/: open_ai_results_failed.json
