[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfast-api"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["transformers", "torch", "accelerate", "openai"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/suecharo/humandbs-llm-test"
Documentation = "https://github.com/suecharo/humandbs-llm-test/blob/main/README.md"
Repository = "https://github.com/suecharo/humandbs-llm-test.git"

[project.optional-dependencies]
tests = ["isort", "mypy", "pylint", "pytest"]

[tool.setuptools]
packages = ["humandbs_llm_test"]

[tool.mypy]
files = ["./humandbs_llm_test/**/*.py"]
follow_imports = "silent"
strict = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0301", # Line too long
    "R0401", # Cyclic import
    "R0903", # Too few public methods
    "R0911", # Too many return statements
    "R0912", # Too many branches
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "R0915", # Too many statements
    "R1705", # Unnecessary "else" after "return"
]
